--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=notificationService
 
 # RabbitMQ
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=hobbit-notification-rabbitmq
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+
+server.port=8083
